--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,41 @@
     </header>
     <hr>
     <main>
+        <section><!--Imagen del Inicio-->
+            <img src="" alt="">
+        </section>
+        <section>
+            <section><!--Tarjetas Recetas-->
+                <table border="1">
+                    <tr>
+                        <th>Entrada</th>
+                        <th>Fuerte</th>
+                        <th>Guarnicion</th>
+                        <th>Postre</th>
+                    </tr>
+                </table>
+            </section>
+            <section><!--Tarjetas Cuchillos-->
+                <table border="1">
+                    <tr>
+                        <th>Entrada</th>
+                        <th>Fuerte</th>
+                        <th>Guarnicion</th>
+                        <th>Postre</th>
+                    </tr>
+                </table>
+            </section>
+        </section>
+        <section><!--Sobre Nosotros-->
 
+        </section>
+        <section><!--Registro/Inicio-->
+
+        </section>
     </main>
+    <hr>
+    <footer>
+
+    </footer>
 </body>
 </html>
