--- a/Cuchillos/Cuchillos.html
+++ b/Cuchillos/Cuchillos.html
@@ -36,5 +36,19 @@
         </nav>
     </header>
     <hr>
+    <main>
+        <section><!--Cuchillo Chef-->
+
+        </section>
+        <section><!--Cuchillo Filetero-->
+
+        </section>
+        <section><!--Cuchillo Verdulero-->
+
+        </section>
+        <section><!--Cuchillo Para Pan-->
+
+        </section>
+    </main>
 </body>
 </html>
