--- a/Index.html
+++ b/Index.html
@@ -52,14 +52,12 @@
                 </table>
             </section>
             <section><!--Tarjetas Cuchillos-->
-                <table border="1">
-                    <tr>
-                        <th>Entrada</th>
-                        <th>Fuerte</th>
-                        <th>Guarnicion</th>
-                        <th>Postre</th>
-                    </tr>
-                </table>
+                <div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </section>
         </section>
         <section><!--Sobre Nosotros-->
