--- a/Cuchillos/Cuchillos.html
+++ b/Cuchillos/Cuchillos.html
@@ -39,43 +39,227 @@
     <main>
         <section><!--Cuchillo Chef-->
             <div>
-                <img src="" alt="">
-                <table>
+                <img src="./Imagenes_Cuchillo/Zuko avatar.jpg" alt="">
+                <table border="1">
                     <tr>
                         <th>Nombre_cuchillo</th>
                         <th>Precio_cuchillo</th>
                     </tr>
                 </table>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <img src="./Imagenes_Cuchillo/Zuko avatar.jpg" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
         </section>
         <section><!--Cuchillo Filetero-->
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
         </section>
         <section><!--Cuchillo Verdulero-->
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
         </section>
         <section><!--Cuchillo Para Pan-->
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
+            <div>
+                <img src="" alt="">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                </table>
+            </div>
         </section>
     </main>
 </body>
