--- a/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
+++ b/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
@@ -36,8 +36,36 @@
         </nav>
     </header>
     <hr>
-    <section>
-        
-    </section>
+    <main>
+        <section>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                        <td>Precio</td>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                        <td>nombre_y_tipo_cuchillo</td>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+    </main>
 </body>
 </html>
