--- a/Cuchillos/Cuchillos.html
+++ b/Cuchillos/Cuchillos.html
@@ -37,7 +37,8 @@
     </header>
     <hr>
     <main>
-        <section><!--Cuchillo Chef-->
+        <section>
+            <p>Cuchillos de Chef</p><!--Cuchillo Chef-->
             <div>
                 <img src="./Imagenes_Cuchillo/Zuko avatar.jpg" alt="">
                 <table border="1">
@@ -93,7 +94,9 @@
                 </table>
             </div>
         </section>
-        <section><!--Cuchillo Filetero-->
+        <br>
+        <section>
+            <p>Cuchillos fileteros</p><!--Cuchillo Filetero-->
             <div>
                 <img src="" alt="">
                 <table border="1">
@@ -149,7 +152,9 @@
                 </table>
             </div>
         </section>
-        <section><!--Cuchillo Verdulero-->
+        <br>
+        <section>
+            <p>Cuchillos verduleros</p><!--Cuchillo Verdulero-->
             <div>
                 <img src="" alt="">
                 <table border="1">
@@ -205,7 +210,9 @@
                 </table>
             </div>
         </section>
-        <section><!--Cuchillo Para Pan-->
+        <br>
+        <section>
+            <p>Cuchillos para pan</p><!--Cuchillo Para Pan-->
             <div>
                 <img src="" alt="">
                 <table border="1">
