--- a/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
+++ b/Cuchillos/Cuchillo_De_Chef/Cuchillo_De_Chef.html
@@ -44,11 +44,9 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
-                        <td>Precio</td>
                     </tr>
                     <tr>
                         <th>Nombre_cuchillo</th>
-                        <td>nombre_y_tipo_cuchillo</td>
                     </tr>
                     <div class="descripcion">
                         <p>descripcion_cuchillo</p>
@@ -56,15 +54,150 @@
                 </table>
                 </div>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
         </section>
     </main>
 </body>
