--- a/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
+++ b/Cuchillos/Cuchillo_Para_Pan/Cuchillo_Para_Pan.html
@@ -36,5 +36,169 @@
         </nav>
     </header>
     <hr>
+    <main>
+        <section>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <div class="content">
+                <table border="1">
+                    <tr>
+                        <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
+                        <th>Nombre_cuchillo</th>
+                    </tr>
+                    <div class="descripcion">
+                        <p>descripcion_cuchillo</p>
+                    </div>
+                </table>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
