--- a/Index.html
+++ b/Index.html
@@ -38,16 +38,87 @@
     <hr>
     <main>
         <section><!--Imagen del Inicio-->
-            <img src="" alt="">
+            <div>
+                <p><h1>Creado para Deleitar</h1></p>
+                <h2>Lo Mejor de Nuestro Recetario</h2>
+            </div>
+            <img src="./Imagenes/food-1898194_1280.jpg" alt="Img_Main" width="100%">
         </section>
         <section>
             <section><!--Tarjetas Recetas-->
-                <table border="1">
+                <table border="1" width="100%" height="800px">
                     <tr>
-                        <th>Entrada</th>
-                        <th>Fuerte</th>
-                        <th>Guarnicion</th>
-                        <th>Postre</th>
+                        <th>Entrada:Bruschetta de Tomate y Albahaca
+                            <br>
+                            <img src="./Imagenes/Bruschetta_de_Tomate_y_Albahaca.jpg" alt="Brouchetta de tomate" width="50%" >
+                            <ul> <h2>Ingredientes:</h2>
+                                <li>1 baguette</li>
+                                <li>2 tazas de tomates cherry, picados</li>
+                                <li>1 diente de ajo, picado</li>
+                                <li>1/4 taza de hojas de albahaca fresca, picadas</li>
+                                <li>3 cucharadas de aceite de oliva</li>
+                                <li>Sal y pimienta al gusto</li>
+                            </ul>
+                            <ol> <h2>Instrucciones:</h2>
+                                <li>Precalienta el horno a 200°C.</li>
+                                <li>Corta la baguette en rebanadas y tuéstalas en el horno durante 5-7 minutos.</li>
+                                <li>En un bol, mezcla los tomates, ajo, albahaca, aceite de oliva, sal y pimienta.</li>
+                                <li>Coloca la mezcla sobre las rebanadas de baguette tostadas y sirve.</li>
+                            </ol>
+                        </th>
+                        <th>Fuerte: Pollo Al Limón
+                            <br>
+                            <img src="./Imagenes/Pollo_Al_Limon.jpg" alt="Pollo al limon" width="50%">
+                            <ul> <h2>Ingredientes:</h2>
+                                <li>4 pechugas de pollo</li>
+                                <li>2 limones (su jugo)</li>
+                                <li>3 cucharadas de aceite de oliva</li>
+                                <li>2 dientes de ajo, picados</li>
+                                <li>Sal y pimienta al gusto</li>
+                                <li>Perejil fresco (opcional, para decorar)</li>
+                            </ul>
+                            <ol> <h2>Instrucciones:</h2>
+                                <li>Marinar el pollo con el jugo de limón, aceite de oliva, ajo, sal y pimienta durante 30 minutos.</li>
+                                <li>Calentar una sartén a fuego medio y cocinar el pollo durante 6-7 minutos por cada lado, o hasta que esté dorado y cocido.</li>
+                                <li>Decorar con perejil fresco y servir.</li>
+                            </ol>
+                        </th>
+                        <th>Guarnicion:  Puré de Papas
+                            <br>
+                            <img src="./Imagenes/Puré_de_Papas.jpg" alt=" Puré de Papas" width="50%">
+                            <ul> <h2>Ingredientes:</h2>
+                                <li>1 kg de papas</li>
+                                <li>100 g de mantequilla</li>
+                                <li>1/2 taza de leche</li>
+                                <li>Sal y pimienta al gusto</li>
+                            </ul>
+                            <ol> <h2>Instrucciones:</h2>
+                                <li>Pelar y cortar las papas en trozos. Cocinar en agua hirviendo con sal durante 15-20 minutos o hasta que estén tiernas.</li>
+                                <li>Escurrir las papas y hacer un puré con un pisa-papas.</li>
+                                <li>Agregar la mantequilla, leche, sal y pimienta. Mezclar bien hasta obtener una textura cremosa.</li>
+                            </ol>
+                        </th>
+                        <th>Postre: Brownies de Chocolate
+                            <br>
+                            <img src="./Imagenes/Brownies_de_Chocolate.jpg" alt="Brownies de Chocolate" width="50%">
+                            <ul> <h2>Ingredientes:</h2>
+                                <li>150 g de chocolate negro</li>
+                                <li>100 g de mantequilla</li>
+                                <li>1 taza de azúcar</li>
+                                <li>2 huevos</li>
+                                <li>1/2 taza de harina</li>
+                                <li>1/4 cucharadita de sal</li>
+                                <li>1/2 taza de nueces (opcional)</li>
+                            </ul>
+                            <ol> <h2>Instrucciones:</h2>
+                                <li>Precalentar el horno a 180°C y engrasar un molde.</li>
+                                <li>Derretir el chocolate y la mantequilla a baño maría.</li>
+                                <li>Retirar del fuego y añadir el azúcar, mezclar bien.</li>
+                                <li>Agregar los huevos uno a uno, seguido de la harina y la sal. Mezclar hasta que esté suave.</li>
+                                <li>Incorporar las nueces (si se utilizan) y verter en el molde.</li>
+                                <li>Hornear durante 20-25 minutos. Dejar enfriar antes de cortar.</li>
+                            </ol>
+                        </th>
                     </tr>
                 </table>
             </section>
