--- a/Index.html
+++ b/Index.html
@@ -131,8 +131,29 @@
                 </div>
             </section>
         </section>
+        <hr>
         <section><!--Sobre Nosotros-->
-
+            <h1>Bienvenidos a Git Food</h1>
+            <p>
+                En [Nombre de tu Página], creemos que la cocina es más que solo preparar alimentos; es una forma de expresar amor, creatividad y tradición. 
+                Nuestra misión es reunir a amantes de la cocina de todas partes, ofreciendo una plataforma donde puedan descubrir, compartir y disfrutar de recetas deliciosas y accesibles.
+            </p>
+            <h2>Nuestra Historia</h2>
+            <p>Todo comenzó como un pequeño proyecto en la cocina de nuestra casa, donde la pasión por la gastronomía se transformó en una aventura culinaria. 
+                Con el tiempo, nos dimos cuenta de que había una gran comunidad de personas que, como nosotros, buscaban inspiración para sus comidas diarias y ocasiones especiales. 
+                Así nació [Nombre de tu Página], un espacio dedicado a la recopilación de recetas que abarcan desde entradas encantadoras hasta postres decadentes.
+            </p>
+            <h2>Lo Que Ofrecemos</h2>
+            <ul>
+                <li><b>Recetas Variadas:</b> Ya seas un principiante o un chef experimentado, aquí encontrarás una amplia gama de recetas que se adaptan a todos los niveles de habilidad y preferencias dietéticas. 
+                    Desde platos vegetarianos hasta opciones con carne, hay algo para cada gusto.
+                </li>
+                <li><b>Consejos y Trucos:</b> Creemos que cocinar debe ser una experiencia divertida y sin estrés. Por eso, compartimos consejos útiles, técnicas de cocina y trucos que facilitarán tu tiempo en la cocina.
+                </li>
+                <li><b>Comunidad:</b> Nos esforzamos por construir una comunidad donde los amantes de la cocina puedan compartir sus experiencias, recetas y consejos. 
+                    Te invitamos a participar, dejar comentarios y compartir tus propias creaciones.
+                </li>
+            </ul>
         </section>
         <section><!--Registro/Inicio-->
 
@@ -140,7 +161,19 @@
     </main>
     <hr>
     <footer>
-
+        <div>
+            <h3>GIT-FOOD</h3>
+            <p>Explora recetas tradicionales y modernas que celebran la diversidad culinaria. 
+                    Comparte momentos especiales alrededor de la mesa con nuestras deliciosas propuestas.</p>
+            <ul>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2023 GIT-FOOD. Todos los derechos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
