--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
         </section>
         <section>
             <section><!--Tarjetas Recetas-->
-                <table border="1" width="100%" height="800px">
+                <table width="100%" height="800px">
                     <tr>
                         <th>Entrada:Bruschetta de Tomate y Albahaca
                             <br>
