--- a/Cuchillos/Cuchillos.html
+++ b/Cuchillos/Cuchillos.html
@@ -47,7 +47,8 @@
                     </tr>
                 </table>
             </div>
-            <div></div>
+            <div>
+            </div>
             <div></div>
             <div></div>
             <div></div>
@@ -228,5 +229,6 @@
             </div>
         </section>
     </main>
+    
 </body>
 </html>
