--- a/Index.html
+++ b/Index.html
@@ -123,12 +123,107 @@
                 </table>
             </section>
             <section><!--Tarjetas Cuchillos-->
+                <table width="100%" height="800px">
+                <tr>
                 <div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <th>
+                    <br>
+                    <div>
+                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_chef/81oyHHA+kCL._AC_SL1500_.jpg" alt="cuchillo de chef" width="40%">
+                        <div class="content">
+                        <table border="1">
+                        <tr>
+                            <th>SHAN ZU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 293.277 COP</th>
+                        </tr>
+                        <div class="descripcion">
+                            <p>Cuchillo de chef</p>
+                                <p>Cuchillo de chef de acero japonés de 8 pulgadas,
+                                    cuchillo de cocina de Damasco,
+                                    cuchillos de cocina profesionales afilados de alto carbono,
+                                    cuchillo de cocina de acero súper resistente
+                                </p>
+                        </div>
+                        </table>
+                        </div>
+                    </div>
+                    </th>
+                    <th>
+                    <br>
+                    <div>
+                        <img src="/Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_filetero/61sUzTzJjCL._AC_SL1500_.jpg" alt="cuchillo filetero" width="40%">
+                        <div class="content">
+                        <table border="1">
+                        <tr>
+                            <th>SHAN ZU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 125.684 COP</th>
+                        </tr>
+                        <div class="descripcion">
+                            <p>Cuhcillo filetero</p>
+                            <p>Cuchillo de filete de 7 pulgadas,
+                                 cuchillo para deshuesar pescado y carne,
+                                  cuchillo profesional súper afilado
+                                   hecho de acero inoxidable alemán cuchillo deshuesador
+                            </p>
+                        </div>
+                        </table>
+                        </div>
+                    </div>
+                    </th>
+                    <th>
+                    <br>
+                    <div>
+                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_verdulero/71RMJaGTtYL._AC_SL1500_.jpg" alt="cuchillo verdulero" width="40%">
+                        <div class="content">
+                        <table border="1">
+                        <tr>
+                            <th>SHAN ZU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 209.502 COP</th>
+                        </tr>
+                        <div class="descripcion">
+                            <p>cuchillo verdulero</p>
+                            <p>Cuchillo de pelar,
+                                 cuchillo de acero de Damasco para frutas de 4 pulgadas,
+                                  cuchillos de alto carbono de acero para tallar frutas
+                            </p>
+                        </div>
+                        </table>
+                        </div>
+                    </div>
+                    </th>
+                    <th>
+                    <br>
+                    <div>
+                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_pan/61lFR+ukn6L._AC_SL1500_.jpg" alt="cuchillo para pan" width="40%">
+                        <div class="content">
+                        <table border="1">
+                        <tr>
+                            <th>SHAN ZU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 293.319 COP</th>
+                        </tr>
+                        <div class="descripcion">
+                            <p>cuchillo para pan</p>
+                            <p>Cuchillo de pan,
+                                 cuchillo alemán de acero inoxidable 1.4116 de 10 pulgadas con mango de madera,
+                                  mango de diseño de mango completo para rebanar pan,
+                                   pastelería, cuchillo afilado para rebanar
+                            </p>
+                        </div>
+                        </table>
+                        </div>
+                    </div>
+                    </th>
                 </div>
+                </tr>
+                </table>
             </section>
         </section>
         <hr>
