--- a/Cuchillos/Cuchillos.html
+++ b/Cuchillos/Cuchillos.html
@@ -37,22 +37,96 @@
     </header>
     <hr>
     <main>
+        <section>
         <section><!--Cuchillo Chef-->
-            <div>
-                <img src="./Imagenes_Cuchillo/Zuko avatar.jpg" alt="">
-                <table border="1">
-                    <tr>
-                        <th>Nombre_cuchillo</th>
-                        <th>Precio_cuchillo</th>
-                    </tr>
-                </table>
-            </div>
-            <div>
-            </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <table width="100%" height="800px">
+                <tr>
+                <div>
+                    <P>Cuchillos de chef</P>
+                <th>
+                <div>
+                    <img src="./Imagenes_Cuchillo/Imagenes_cuchillo_chef/81oyHHA+kCL._AC_SL1500_.jpg" alt="cuchillo chef shan zu" width="50%">
+                    <table border="1">
+                        <tr>
+                            <th>SHAN ZU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 293.277 COP</th>
+                        </tr>
+                        <div class="descripcion">
+                            <p>szs</p>
+                        </div>
+                    </table>
+                </div>
+                </th>
+                <th>
+                <div>
+                    <img src="./Imagenes_Cuchillo/Imagenes_cuchillo_chef/cuchillo2.jpg" alt="cuchillo chef kanngou" width="50%">
+                    <table border="1">
+                        <tr>
+                            <th>KANNGOU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 209.502 COP</th>
+                        </tr>
+                    </table>
+                </div>
+                </th>
+                <th>
+                <div>
+                    <img src="./Imagenes_Cuchillo/Imagenes_cuchillo_chef/cuchillo3.jpg" alt="cuchillo chef imarku" width="50%">
+                    <table border="1">
+                        <tr>
+                            <th>IMARKU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 167.593 COP</th>
+                        </tr>
+                    </table>
+                </div>
+                </th>
+                <th>
+                <div>
+                    <img src="./Imagenes_Cuchillo/Imagenes_cuchillo_chef/cuchillo4.jpg" alt="cuchillo chef shan zu" width="50%">
+                    <table border="1">
+                        <tr>
+                            <th>SHAN ZU</th>
+                        </tr>
+                        <tr>
+                            <th>$$ 209.502 COP</th>
+                        </tr>
+                    </table>
+                </div>
+                </th>
+                <th>
+                <div>
+                    <img src="" alt="">
+                    <table>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                        </tr>
+                    </table>
+                </div>
+                </th>
+                <th>
+                <div>
+                    <img src="" alt="">
+                    <table>
+                        <tr>
+                            <th></th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                        </tr>
+                    </table>
+                </div>
+                </th>
+                </div>
+                </tr>
+            </table>
         </section>
         <br>
         <section>
@@ -62,6 +136,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -71,6 +147,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -80,6 +158,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -89,6 +169,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -98,6 +180,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -107,6 +191,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -120,6 +206,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -129,6 +217,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -138,6 +228,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -147,6 +239,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -156,6 +250,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -165,6 +261,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -178,6 +276,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -187,6 +287,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -196,6 +298,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -205,6 +309,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -214,6 +320,8 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
@@ -223,10 +331,14 @@
                 <table border="1">
                     <tr>
                         <th>Precio_cuchillo</th>
+                    </tr>
+                    <tr>
                         <th>Nombre_cuchillo</th>
                     </tr>
                 </table>
             </div>
+            </section>
+            </table>
         </section>
     </main>
     
