--- a/Index.html
+++ b/Index.html
@@ -122,6 +122,7 @@
                     </tr>
                 </table>
             </section>
+            <br>
             <section><!--Tarjetas Cuchillos-->
                 <table width="100%" height="800px">
                 <tr>
@@ -129,7 +130,7 @@
                     <th>
                     <br>
                     <div>
-                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_chef/81oyHHA+kCL._AC_SL1500_.jpg" alt="cuchillo de chef" width="40%">
+                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_chef/81oyHHA+kCL._AC_SL1500_.jpg" alt="cuchillo de chef" width="50%">
                         <div class="content">
                         <table border="1">
                         <tr>
@@ -153,7 +154,7 @@
                     <th>
                     <br>
                     <div>
-                        <img src="/Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_filetero/61sUzTzJjCL._AC_SL1500_.jpg" alt="cuchillo filetero" width="40%">
+                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_filetero/61sUzTzJjCL._AC_SL1500_.jpg" alt="cuchillo filetero" width="50%">
                         <div class="content">
                         <table border="1">
                         <tr>
@@ -177,7 +178,7 @@
                     <th>
                     <br>
                     <div>
-                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_verdulero/71RMJaGTtYL._AC_SL1500_.jpg" alt="cuchillo verdulero" width="40%">
+                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_verdulero/71RMJaGTtYL._AC_SL1500_.jpg" alt="cuchillo verdulero" width="50%">
                         <div class="content">
                         <table border="1">
                         <tr>
@@ -200,7 +201,7 @@
                     <th>
                     <br>
                     <div>
-                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_pan/61lFR+ukn6L._AC_SL1500_.jpg" alt="cuchillo para pan" width="40%">
+                        <img src="./Cuchillos/Imagenes_Cuchillo/Imagenes_cuchillo_pan/61lFR+ukn6L._AC_SL1500_.jpg" alt="cuchillo para pan" width="50%">
                         <div class="content">
                         <table border="1">
                         <tr>
