--- a/Cuchillos/Cuchillos.html
+++ b/Cuchillos/Cuchillos.html
@@ -54,7 +54,14 @@
                             <th>$$ 293.277 COP</th>
                         </tr>
                         <div class="descripcion">
-                            <p>szs</p>
+                            <p>Sobre este producto</p>
+                            <ul>
+                                <li>Núcleo de acero japonés, súper afilado: el cuchillo de chef SHAN ZU Damasco está forjado de acero de damasco japonés AUS-10, tiene alta dureza (62 HRC), es resistente a la corrosión y al desgaste. </li>
+                                <li>Cuchillo de Damasco real, duradero y hermoso: el cuchillo de chef japonés Damasco es conocido por sus hermosos patrones.</li>
+                                <li>67 capas de acero forjado, duradero: además del núcleo de acero, la hoja está forjada de 66 capas de acero al carbono, acero Damasco superior e inferior de 33 capas y el núcleo de la sección media está hecho de acero Damasco 10Cr15MoV de 1 capa. Lo que mejora en gran medida la resistencia a la corrosión, la resistencia al óxido y la dureza, y es un cuchillo utilitario duradero.</li>
+                                <li>Mango de fibra de vidrio G10, agarre cómodo: el mango de los cuchillos de cocina está hecho de fibra de vidrio G10 esmerilada, que es más fuerte y más cómodo de sostener que las manijas de madera.</li>
+                                <li>【Garantía de por vida】SHAN ZU proporciona placer de cocinar y felicidad en la vida a miles de millones de personas en todo el mundo.</li>
+                            </ul>
                         </div>
                     </table>
                 </div>
